fix(interpretation): harden Stage 3 quality and timing invariants
- QualityAssessment: drop the duplicate `reasonCodes` record component; the
  overall reasons now have one source of truth (interpretationQuality.reasonCodes())
  and `reasonCodes()` is a read-through accessor, so mapper and analytics can
  never diverge.
- TimingAssessment: enforce status <-> reason consistency in the record
  (STALE => FEATURE_SNAPSHOT_STALE or PROCESSING_LATENCY_EXCEEDED;
  CLOCK_SKEW => SOURCE_CLOCK_SKEW, and SOURCE_FUTURE_EVENT when featureAgeMs < 0;
  FRESH => no reasons; UNKNOWN stays the fail-closed fallback). Thresholds
  remain the resolver's responsibility.
- QualityEligibilityPolicy: durations must be whole milliseconds and >= 1 ms;
  sub-/fractional-millisecond durations and toMillis() overflow are rejected
  with IllegalArgumentException instead of silently becoming a different (or
  zero) threshold. Inclusive threshold policy unchanged.
- Tests: 392 -> 399 (targeted regression tests for the three fixes; resolver
  outputs re-enter the record unchanged). Resolver policy table, horizon
  eligibility semantics, V1 engine, goldens, Kafka runtime and metrics untouched.
- Docs: short Stage 3 hardening note in README and roadmap.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>